--- a/public/ploteri/index.html
+++ b/public/ploteri/index.html
@@ -16,7 +16,7 @@
 		<div class="home2">
 			<div class="rtriangle2"></div>
 			<div class="rtriangle"></div>
-			<a href="https://forms.gle/Pwttqp3Snz6YawCH8" target="_blank"><img src="../files/ploterislika.png" class="postimage"></a>
+			<a href="https://forms.gle/TKohwYtMnQaGFavR8" target="_blank"><img src="../files/ploterislika.png" class="postimage"></a>
 			<div class="posttext2">
 				Rad sa ploterima
 			<div class="postsubtext2">
