--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 	  <link rel="preload" href="fonts/montserrat.ttf" as="font" type="font/woff" crossorigin>
 	  <link rel="preload" href="fonts/gothic.TTF" as="font" type="font/woff" crossorigin>
 	  
+	  <meta name="description" content="Besplatni kursevi za sve đake, studente i mlade sa teritorije opštine Stara Pazova!">
+	  
 		<meta property="og:title" content="ICER - Inovacioni centar za edukaciju i razvoj">
 		<meta property="og:description" content="Stara Pazova">
 		<meta property="og:image" content="https://icerpazova.com/files/logo.jpg">
