--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 					<div class="slidepic">
 						<a href="robotika/index.html"><img src="files/robotikaslika.png" class="secondarypic1" id="slideop1"></a>
 						<a href="3d/index.html"><img src="files/3dslika.png" class="slidemainpic" id="slideop2">
-						<a href="novikurs/index.html"><img src="files/uskorokursevi.png" class="secondarypic2" id="slideop3"></a>
+						<a href="ploteri/index.html"><img src="files/ploterislika.png" class="secondarypic2" id="slideop3"></a>
 					</div>
 					<div class="arrslide" onclick="slideshow(1)">&#9655;</div>
 				</div>
