--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,7 @@
 				<div class="slideshow">
 					<div class="arrslide" onclick="slideshow(0)">&#9665;</div>
 					<div class="slidepic">
+						<a href="novikurs/index.html"><img src="files/tvojaideja.png" class="displayNone" id="slideop4"></a>
 						<a href="robotika/index.html"><img src="files/robotikaslika.png" class="secondarypic1" id="slideop1"></a>
 						<a href="3d/index.html"><img src="files/3dslika.png" class="slidemainpic" id="slideop2">
 						<a href="ploteri/index.html"><img src="files/ploterislika.png" class="secondarypic2" id="slideop3"></a>
