update novi kurs

--- a/public/novikurs/index.html
+++ b/public/novikurs/index.html
@@ -25,6 +25,9 @@
 				Glasaj za neki od ponuđenih tema ili nam opiši šta je to i mi ćemo probati da napravimo kurs baš na tu temu!
 			</td></tr></table><br>
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Možeš i predložiti i temu za kurs koji bi želeo/la da predaješ.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
 				To može biti bilo šta, a evo nekih predloga koje možeš izabrati:
 				<ul>
 				<li>Programiranje</li>
