--- a/public/novikurs/index.html
+++ b/public/novikurs/index.html
@@ -32,9 +32,11 @@
 				<ul>
 				<li>Programiranje</li>
 				<li>Web dizajn</li>
+				<li>Muzička produkcija</li>
 				<li>Kako osnovati firmu</li>
 				<li>Photoshop</li>
 				<li>Video editovanje</li>
+				<li>Animacija</li>
 				<li>Kako napisati CV</li>
 				<li>Koju srednju školu/fakultet da upišem?</li>
 				</ul>
