--- a/public/ploteri/index.html
+++ b/public/ploteri/index.html
@@ -24,13 +24,13 @@
 				Na ovom kursu ćete imati priliku da saznate kako se koriste ploteri.
 			</td></tr></table><br>
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Kurs će se održati u prostorijama Inovacionog startap centra u Staroj Pazovi, Kralja Petra I Karađorđevića 2, 3. sprat.
+				Kurs će se održati u prostorijama Inovacionog startap centra u Staroj Pazovi, Kralja Petra I Karađorđevića 2, 3. sprat, <b>u sredu 08.12.2021.</b>
 			</td></tr></table><br>
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
 				Kompletan kurs uključujući sva predavanja i materijale je u potpunosti <b style="color:#F08113">besplatan</b>.
 			</td></tr></table><br>
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Prijave su otvorene do 05.12.2021.
+				Prijave su otvorene do 07.12.2021.
 			</td></tr></table>
 			<div class="uclanisebutton"><a href="https://forms.gle/TKohwYtMnQaGFavR8" target="_blank" style="color:white;">Prijavi se!</a></div>
 			</div>
