--- a/public/3d/index.html
+++ b/public/3d/index.html
@@ -16,7 +16,7 @@
 		<div class="home2">
 			<div class="rtriangle2"></div>
 			<div class="rtriangle"></div>
-			<a href="https://forms.gle/Pwttqp3Snz6YawCH8" target="_blank"><img src="../files/3dslika.png" class="postimage"></a>
+			<a href="https://forms.gle/E9DxmGrHRNNkmupu9" target="_blank"><img src="../files/3dslika.png" class="postimage"></a>
 			<div class="posttext2">
 				3D štampa i modelovanje
 			<div class="postsubtext2">
