--- a/public/novikurs/index.html
+++ b/public/novikurs/index.html
@@ -39,6 +39,7 @@
 				<li>Animacija</li>
 				<li>Kako napisati CV</li>
 				<li>Koju srednju školu/fakultet da upišem?</li>
+				<li>Osnove Adobe Illustrator-a</li>
 				</ul>
 			</td></tr></table>
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
