--- a/public/robotika/index.html
+++ b/public/robotika/index.html
@@ -16,7 +16,7 @@
 		<div class="home2">
 			<div class="rtriangle2"></div>
 			<div class="rtriangle"></div>
-			<a href="https://forms.gle/Pwttqp3Snz6YawCH8" target="_blank"><img src="../files/robotikaslika.png" class="postimage"></a>
+			<a href="https://forms.gle/E9DxmGrHRNNkmupu9" target="_blank"><img src="../files/robotikaslika.png" class="postimage"></a>
 			<div class="posttext2">
 				Robotika / Elektronika
 			<div class="postsubtext2">
@@ -39,7 +39,7 @@
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
 				Kompletan kurs uključujući sva predavanja i materijale je u potpunosti <b style="color:#F08113">besplatan</b> za sve članove ICER-a.
 			</td></tr></table>
-			<div class="uclanisebutton"><a href="https://forms.gle/Pwttqp3Snz6YawCH8" target="_blank" style="color:white;">Prijavi se!</a></div>
+			<div class="uclanisebutton"><a href="https://forms.gle/E9DxmGrHRNNkmupu9" target="_blank" style="color:white;">Prijavi se!</a></div>
 			</div>
 			</div>
 		</div>
