--- a/public/3d/index.html
+++ b/public/3d/index.html
@@ -18,7 +18,8 @@
 			<div class="rtriangle"></div>
 			<a href="https://forms.gle/E9DxmGrHRNNkmupu9" target="_blank"><img src="../files/3dslika.png" class="postimage"></a>
 			<div class="posttext2">
-				3D štampa i modelovanje
+				3D štampa i modelovanje<br>
+				Prijave su zatvorene!
 			<div class="postsubtext2">
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
 				Na ovom kursu ćemo ući u svet 3D štampe!<br>
@@ -42,7 +43,7 @@
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
 				<b>Prijave su otvorene do 15. decembra!</b>
 			</td></tr></table>
-			<div class="uclanisebutton"><a href="https://forms.gle/E9DxmGrHRNNkmupu9" target="_blank" style="color:white;">Prijavi se!</a></div>
+			<!--<div class="uclanisebutton"><a href="https://forms.gle/E9DxmGrHRNNkmupu9" target="_blank" style="color:white;">Prijavi se!</a></div-->
 			</div>
 			</div>
 		</div>
