--- a/public/galerija/index.html
+++ b/public/galerija/index.html
@@ -20,8 +20,8 @@
 			<div class="naslovGalerije">Galerija</div>
 			<div class="categoryHolder">
 				<a href="https://drive.google.com/drive/folders/1AwdtbTG8jBJKIWnT1tL-tprzaWqLigqa?usp=sharing" target="_blank"><img src="3d.jpg" class="categoryDiv"></a>
-				<a href="" target="_blank"><img src="prostorije.jpg" class="categoryDiv"></a>
-				<a href="" target="_blank"><img src="robotika.jpg" class="categoryDiv"></a>
+				<a href="https://drive.google.com/drive/folders/1pfr8_e7hfH6NOl4CBEHVg_zQDDkgPZMA?usp=sharing" target="_blank"><img src="prostorije.jpg" class="categoryDiv"></a>
+				<!-- <a href="" target="_blank"><img src="robotika.jpg" class="categoryDiv"></a> -->
 			</div>
 		</div>
 		
