--- a/public/robotika/index.html
+++ b/public/robotika/index.html
@@ -18,7 +18,8 @@
 			<div class="rtriangle"></div>
 			<a href="https://forms.gle/E9DxmGrHRNNkmupu9" target="_blank"><img src="../files/robotikaslika.png" class="postimage"></a>
 			<div class="posttext2">
-				Robotika / Elektronika
+				Robotika / Elektronika<br>
+				Prijave su zatvorene!
 			<div class="postsubtext2">
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
 				Na ovom kursu ćemo ući u svet elektronike!<br>
@@ -38,9 +39,6 @@
 			</td></tr></table><br>
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
 				Kompletan kurs uključujući sva predavanja i materijale je u potpunosti <b style="color:#F08113">besplatan</b> za sve članove ICER-a.
-			</td></tr></table>
-			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"></th><td>
-				<b>Prijave su zatvorene!</b>
 			</td></tr></table>
 			</div>
 			</div>
