--- a/public/robotika/prijave.html
+++ b/public/robotika/prijave.html
@@ -7,58 +7,41 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	  <link rel="stylesheet" href="../files/maincss.css" />
 	  <link rel="stylesheet" href="../files/kurscss.css" />
-	  <link rel="stylesheet" href="robotika.css" />
 	  <script src="../files/jsscript.js"></script>
 	  <link rel="shortcut icon" type="image/jpg" href="../favicon.png"/>
   </head>
   <body>
 	<div class="main">
 		
-		<div class="home3">
-			<!--slika-->
-			<div class="categoryHolder">
-				<img src="../galerija/robotika.jpg" class="categoryDiv">
-				<div class="categoryDiv2">
-					<div class="naslovMaterijali">MATERIJALI</div>
-
-					<a href="https://www.tinkercad.com/joinclass/31SJDZTJ6Y7Y" target="_blank" title="Učionica" class="hoveringA">
-						<div class="linksDiv">
-							<img src="tinkercad.svg" class="linkIcon" alt="Učionica">
-							<span class="linksTitle">Učionica</span>
-							<span class="linksText">
-								Pristup Tinkercad učionici. Ovde možete videti sve vežbe koje radimo na časovima u simulatoru sa kôdom. 
-								<br>Nickname vam je &#60;imeprezime&#62; 
-								<br>(primer: petarpetrovic).
-							</span>
-						</div>
-					</a>
-
-					<a href="https://drive.google.com/drive/folders/1I8mTCqs9OldDnI1r7zIiCm7Jy8ME9N_l?usp=sharing" target="_blank" title="Materijali" class="hoveringA">
-						<div class="linksDiv">
-							<img src="files.svg" class="linkIcon" alt="Materijali">
-							<span class="linksTitle">Materijali</span>
-							<span class="linksText">
-								Ovde možete pronaći sve materijale koje koristimo na časovima (prezentacije, linkove, programe...).
-							</span>
-						</div>
-					</a>
-
-					
-						<div class="linksDiv">
-							<a href="https://docs.google.com/spreadsheets/d/1VWYWalUz_l5wVF8-xH9tx0pRPww7FCFNFH8J2pfEQo8/edit?usp=sharing" target="_blank" title="Raspored" class="hoveringA">
-							<img src="calendar.svg" class="linkIcon" alt="Raspored">
-							<span class="linksTitle">Termini</span>
-							<span class="linksText">
-								Ovde možete videti svoj termin, u prvom redu je naznačen datum.
-								<br><br>
-								Zahtev za promenu termina možete poslati ovde:
-							</a>
-								<div class="buttonTermin">Promeni termin</div>
-							</span>
-						</div>
-				</div>
+		<div class="home2">
+			<div class="rtriangle2"></div>
+			<div class="rtriangle"></div>
+			<a href="https://forms.gle/E9DxmGrHRNNkmupu9" target="_blank"><img src="../files/robotikaslika.png" class="postimage"></a>
+			<div class="posttext2">
+				Robotika / Elektronika<br>
+				Prijave su zatvorene!
+			<div class="postsubtext2">
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Na ovom kursu ćemo ući u svet elektronike!<br>
+				Imaćete priliku da saznate šta je to mikrokontroler, kao i neke osnovne elektronske komponente.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Naučićete da napravite semafor, sintisajzer, autić koji izbegava prepreke i mnoge druge zanimljive i korisne stvari.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Takođe ćemo videti šta je sve potrebno da bi se napravili neki razni jednostavni roboti korišćenjem mikrokontrolera.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Putem interaktivnih predavanja i praktičnih radionica upoznaćete se sa svim neophodnim komponentama i naučiti kako da ih koristite za sopstvene ideje i projekte.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Na kraju kursa imaćete priliku da svoju ideju sprovedete u realnost uz podršku predavača.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Kompletan kurs uključujući sva predavanja i materijale je u potpunosti <b style="color:#F08113">besplatan</b> za sve članove ICER-a.
+			</td></tr></table>
 			</div>
-			
+			</div>
 		</div>
 		
 		<div class="kontaktdiv">
@@ -119,6 +102,7 @@
 	<div class="header" id="header">
 		<span class="linksHolder" id="linksHolder">
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="../index.html"><span id="homespan" class="linija"></span><span id="homehead">Početna</span></a></span>
+		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#"><span id="kursevispan" class="linija"></span><span id="kursevihead">Prijavi se!</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#kontakt"><span id="kontaktspan" class="linija"></span><span id="kontakthead">Kontakt</span></a></span>
 		</span>
 		<a href="../index.html"><img src="../files/logo_transparent.png" class="head_logo" id="headLogo" onclick="location.reload();" alt="ICER"></a>
