link promena termina

--- a/public/robotika/index.html
+++ b/public/robotika/index.html
@@ -53,7 +53,9 @@
 								<br><br>
 								Zahtev za promenu termina možete poslati ovde:
 							</a>
+							<a href="https://docs.google.com/forms/d/e/1FAIpQLSd0BRi95js6ucPJGI8tw8NmIb7EVS-vMUGXBLg2t5fznx3InQ/viewform?usp=sf_link" target="_blank">
 								<div class="buttonTermin">Promeni termin</div>
+							</a>
 							</span>
 						</div>
 				</div>
