--- a/public/galerija/index.html
+++ b/public/galerija/index.html
@@ -19,9 +19,9 @@
 			<div class="rtriangle"></div>
 			<div class="naslovGalerije">Galerija</div>
 			<div class="categoryHolder">
-				<a href="https://drive.google.com/drive/folders/1AwdtbTG8jBJKIWnT1tL-tprzaWqLigqa?usp=sharing" target="_blank"><img src="3d.jpg" class="categoryDiv"></a>
+				<a href="https://drive.google.com/drive/folders/17eZwueYBxRD75mYhkVXq1dmXh0qC7qqf?usp=sharing" target="_blank"><img src="3d.jpg" class="categoryDiv"></a>
 				<a href="https://drive.google.com/drive/folders/1pfr8_e7hfH6NOl4CBEHVg_zQDDkgPZMA?usp=sharing" target="_blank"><img src="prostorije.jpg" class="categoryDiv"></a>
-				<a href="https://drive.google.com/drive/folders/1DZRDFI-R6103W_ruvK_w_x9e9f29FOOt" target="_blank"><img src="robotika.jpg" class="categoryDiv"></a>
+				<a href="https://drive.google.com/drive/folders/1nVEvZN9M7oUw6T4Qv0TWy5hMYtZZZ9Yv?usp=sharing" target="_blank"><img src="robotika.jpg" class="categoryDiv"></a>
 			</div>
 		</div>
 		
