updated design course

--- a/public/dizajn/index.html
+++ b/public/dizajn/index.html
@@ -21,25 +21,19 @@
 				Osnove grafičkog dizajna
 			<div class="postsubtext2">
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Na ovom kursu ćemo ući u svet grafičkog dizajna!
+				Na ovom kursu upoznaćete se sa primenama i procesom iza kreiranja grafičkih rešenja!
 			</td></tr></table><br>
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Naučićete kako se prave ....
+				Naučićete osnove kroz interaktivne vežbe u programima Adobe Photoshop i Adobe Illustrator, a potom i kreirati svoj dizajn!
 			</td></tr></table><br>
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Takođe ćemo videti koji se sve programi koriste, poput fotošopa (Adobe Photoshop) i ilustratora (Adobe Illustrator).
-			</td></tr></table><br>
-			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Putem interaktivnih predavanja i praktičnih radionica naučićete kako da napravite dizajn po želji.
-			</td></tr></table><br>
-			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Imaćete priliku da sami osmislite i napravite ...
+				Saznaćete kako da svoju kreativnu stranu ispoljite u digitalnom obliku, ali i dobijete sliku o jednom od aktuelnijih poslova današnjice!
 			</td></tr></table><br>
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
 				Kompletan kurs uključujući sva predavanja i materijale je u potpunosti <b style="color:#F08113">besplatan</b> za sve članove ICER-a.
 			</td></tr></table><br>
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				<b>Prijave su otvorene do X jula!</b>
+				<b>Prijave su otvorene do 5. jula!</b>
 			</td></tr></table>
 			<div class="uclanisebutton"><a href="https://docs.google.com/forms/d/e/1FAIpQLScV012pDsqIAHilAXeM_pNFdn5ZqifgqALlJ30fu3SV6Yqq6Q/viewform?usp=sf_link" target="_blank" style="color:white;">Prijavi se!</a></div>
 			</div>
