--- a/public/index.html
+++ b/public/index.html
@@ -87,8 +87,8 @@
 					<div class="arrslide" onclick="slideshow(0)">&#9665;</div><!--slideshow(0)-->
 					<div class="slidepic">
 						<a href="novikurs/index.html"><img src="files/tvojaideja.png" class="secondarypic1" id="slideop1"></a>
-						<a href="novikurs/index.html"><img src="files/uskorokursevi.png" class="slidemainpic" id="slideop2"></a>
-						<a href="robotika/index.html"><img src="galerija/robotika.jpg" class="secondarypic2" id="slideop3"></a>
+						<a href="dizajn/index.html"><img src="files/dizajnslika.png" class="slidemainpic" id="slideop2"></a>
+						<a href="novikurs/index.html"><img src="files/uskorokursevi.png" class="secondarypic2" id="slideop3"></a>
 					</div>
 					<div class="arrslide" onclick="slideshow(1)">&#9655;</div><!--slideshow(1)-->
 				</div>
