zatvorene prijave dizajn

--- a/public/dizajn/index.html
+++ b/public/dizajn/index.html
@@ -18,7 +18,8 @@
 			<div class="rtriangle"></div>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLScV012pDsqIAHilAXeM_pNFdn5ZqifgqALlJ30fu3SV6Yqq6Q/viewform?usp=sf_link" target="_blank"><img src="../files/dizajnslika.png" class="postimage"></a>
 			<div class="posttext2">
-				Osnove grafičkog dizajna
+				Osnove grafičkog dizajna <br>
+				Prijave su zatvorene!
 			<div class="postsubtext2">
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
 				Na ovom kursu upoznaćete se sa primenama i procesom iza kreiranja grafičkih rešenja!
@@ -35,7 +36,10 @@
 			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
 				<b>Prijave su otvorene do 5. jula!</b>
 			</td></tr></table>
-			<div class="uclanisebutton"><a href="https://docs.google.com/forms/d/e/1FAIpQLScV012pDsqIAHilAXeM_pNFdn5ZqifgqALlJ30fu3SV6Yqq6Q/viewform?usp=sf_link" target="_blank" style="color:white;">Prijavi se!</a></div>
+			<div class="uclanisebutton">
+				Prijave su zatvorene!
+				<!--<a href="https://docs.google.com/forms/d/e/1FAIpQLScV012pDsqIAHilAXeM_pNFdn5ZqifgqALlJ30fu3SV6Yqq6Q/viewform?usp=sf_link" target="_blank" style="color:white;">Prijavi se!</a>-->
+			</div>
 			</div>
 			</div>
 		</div>
