--- a/public/dizajn/index.html
+++ b/public/dizajn/index.html
@@ -2,11 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	  <title>ICER - Osnove grafičkog dizajna</title>
+	  <title>ICER - Grafički dizajn</title>
 	  <meta charset="utf-8" />
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	  <link rel="stylesheet" href="../files/maincss.css" />
 	  <link rel="stylesheet" href="../files/kurscss.css" />
+	  <link rel="stylesheet" href="../galerija/galerija.css" />
 	  <script src="../files/jsscript.js"></script>
 	  <link rel="shortcut icon" type="image/jpg" href="../favicon.png"/>
   </head>
@@ -16,31 +17,12 @@
 		<div class="home2">
 			<div class="rtriangle2"></div>
 			<div class="rtriangle"></div>
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLScV012pDsqIAHilAXeM_pNFdn5ZqifgqALlJ30fu3SV6Yqq6Q/viewform?usp=sf_link" target="_blank"><img src="../files/dizajnslika.png" class="postimage"></a>
-			<div class="posttext2">
-				Osnove grafičkog dizajna <br>
-				Prijave su zatvorene!
-			<div class="postsubtext2">
-			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Na ovom kursu upoznaćete se sa primenama i procesom iza kreiranja grafičkih rešenja!
-			</td></tr></table><br>
-			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Naučićete osnove kroz interaktivne vežbe u programima Adobe Photoshop i Adobe Illustrator, a potom i kreirati svoj dizajn!
-			</td></tr></table><br>
-			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Saznaćete kako da svoju kreativnu stranu ispoljite u digitalnom obliku, ali i dobijete sliku o jednom od aktuelnijih poslova današnjice!
-			</td></tr></table><br>
-			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				Kompletan kurs uključujući sva predavanja i materijale je u potpunosti <b style="color:#F08113">besplatan</b> za sve članove ICER-a.
-			</td></tr></table><br>
-			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
-				<b>Prijave su otvorene do 5. jula!</b>
-			</td></tr></table>
-			<div class="uclanisebutton">
-				Prijave su zatvorene!
-				<!--<a href="https://docs.google.com/forms/d/e/1FAIpQLScV012pDsqIAHilAXeM_pNFdn5ZqifgqALlJ30fu3SV6Yqq6Q/viewform?usp=sf_link" target="_blank" style="color:white;">Prijavi se!</a>-->
+			<div class="naslovGalerije">
+				Odaberite grupu za koju ste se prijavili!
 			</div>
-			</div>
+			<div class="categoryHolder">
+				<a href="prilagodjen.html"><img src="pril.JPG" class="categoryDiv"></a>
+				<a href="kompletan.html"><img src="komp.JPG" class="categoryDiv"></a>
 			</div>
 		</div>
 		
@@ -99,11 +81,9 @@
 			</div>
 		</div>
 	</div>
-	</div>
 	<div class="header" id="header">
 		<span class="linksHolder" id="linksHolder">
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="../index.html"><span id="homespan" class="linija"></span><span id="homehead">Početna</span></a></span>
-		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#"><span id="kursevispan" class="linija"></span><span id="kursevihead">Prijavi se!</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#kontakt"><span id="kontaktspan" class="linija"></span><span id="kontakthead">Kontakt</span></a></span>
 		</span>
 		<a href="../index.html"><img src="../files/logo_transparent.png" class="head_logo" id="headLogo" onclick="location.reload();" alt="ICER"></a>
