--- a/public/dizajn/prijave.html
+++ b/public/dizajn/prijave.html
@@ -2,12 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	  <title>ICER - Galerija</title>
+	  <title>ICER - Osnove grafičkog dizajna</title>
 	  <meta charset="utf-8" />
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	  <link rel="stylesheet" href="../files/maincss.css" />
 	  <link rel="stylesheet" href="../files/kurscss.css" />
-	  <link rel="stylesheet" href="galerija.css" />
 	  <script src="../files/jsscript.js"></script>
 	  <link rel="shortcut icon" type="image/jpg" href="../favicon.png"/>
   </head>
@@ -17,11 +16,31 @@
 		<div class="home2">
 			<div class="rtriangle2"></div>
 			<div class="rtriangle"></div>
-			<div class="naslovGalerije">Galerija</div>
-			<div class="categoryHolder">
-				<a href="https://drive.google.com/drive/folders/17eZwueYBxRD75mYhkVXq1dmXh0qC7qqf?usp=sharing" target="_blank"><img src="3d.jpg" class="categoryDiv"></a>
-				<a href="https://drive.google.com/drive/folders/1pfr8_e7hfH6NOl4CBEHVg_zQDDkgPZMA?usp=sharing" target="_blank"><img src="prostorije.jpg" class="categoryDiv"></a>
-				<a href="https://drive.google.com/drive/folders/1nVEvZN9M7oUw6T4Qv0TWy5hMYtZZZ9Yv?usp=sharing" target="_blank"><img src="robotika.jpg" class="categoryDiv"></a>
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLScV012pDsqIAHilAXeM_pNFdn5ZqifgqALlJ30fu3SV6Yqq6Q/viewform?usp=sf_link" target="_blank"><img src="../files/dizajnslika.png" class="postimage"></a>
+			<div class="posttext2">
+				Osnove grafičkog dizajna <br>
+				Prijave su zatvorene!
+			<div class="postsubtext2">
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Na ovom kursu upoznaćete se sa primenama i procesom iza kreiranja grafičkih rešenja!
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Naučićete osnove kroz interaktivne vežbe u programima Adobe Photoshop i Adobe Illustrator, a potom i kreirati svoj dizajn!
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Saznaćete kako da svoju kreativnu stranu ispoljite u digitalnom obliku, ali i dobijete sliku o jednom od aktuelnijih poslova današnjice!
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Kompletan kurs uključujući sva predavanja i materijale je u potpunosti <b style="color:#F08113">besplatan</b> za sve članove ICER-a.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				<b>Prijave su otvorene do 5. jula!</b>
+			</td></tr></table>
+			<div class="uclanisebutton">
+				Prijave su zatvorene!
+				<!--<a href="https://docs.google.com/forms/d/e/1FAIpQLScV012pDsqIAHilAXeM_pNFdn5ZqifgqALlJ30fu3SV6Yqq6Q/viewform?usp=sf_link" target="_blank" style="color:white;">Prijavi se!</a>-->
+			</div>
+			</div>
 			</div>
 		</div>
 		
@@ -80,9 +99,11 @@
 			</div>
 		</div>
 	</div>
+	</div>
 	<div class="header" id="header">
 		<span class="linksHolder" id="linksHolder">
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="../index.html"><span id="homespan" class="linija"></span><span id="homehead">Početna</span></a></span>
+		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#"><span id="kursevispan" class="linija"></span><span id="kursevihead">Prijavi se!</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#kontakt"><span id="kontaktspan" class="linija"></span><span id="kontakthead">Kontakt</span></a></span>
 		</span>
 		<a href="../index.html"><img src="../files/logo_transparent.png" class="head_logo" id="headLogo" onclick="location.reload();" alt="ICER"></a>
