--- a/public/index.html
+++ b/public/index.html
@@ -212,7 +212,7 @@
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#uclanise"><span id="uclanisespan" class="linija"></span><span id="uclanisehead">Učlani se!</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#prijatelji"><span id="prijateljispan" class="linija"></span><span id="prijateljihead">Prijatelji</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="galerija/index.html"><span id="galerijaspan" class="linija"></span><span id="galerijahead">Galerija</span></a></span>
-		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="robotika/index.html"><span id="robotikamaterijalispan" class="linija"></span><span id="robotikamaterijalihead">Robotika materijali</span></a></span>
+		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="dizajn/index.html"><span id="robotikamaterijalispan" class="linija"></span><span id="robotikamaterijalihead">Dizajn materijali</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#kontakt"><span id="kontaktspan" class="linija"></span><span id="kontakthead">Kontakt</span></a></span>
 		</span>
 		<img src="files/logo_transparent.png" class="head_logo" id="headLogo" onclick="location.reload();" alt="ICER">
