--- a/public/dizajn/index.html
+++ b/public/dizajn/index.html
@@ -8,6 +8,7 @@
 	  <link rel="stylesheet" href="../files/maincss.css" />
 	  <link rel="stylesheet" href="../files/kurscss.css" />
 	  <link rel="stylesheet" href="../galerija/galerija.css" />
+	  <link rel="stylesheet" href="dizajncss.css" />
 	  <script src="../files/jsscript.js"></script>
 	  <link rel="shortcut icon" type="image/jpg" href="../favicon.png"/>
   </head>
