kompletan termini promena

--- a/public/dizajn/kompletan.html
+++ b/public/dizajn/kompletan.html
@@ -25,19 +25,15 @@
 					<div class="obavestenje">
 						Na ovoj strani možete naći sve neophodne informacije vezane za kurs, materijale koje ćete koristiti, videti i promeniti svoj termin. Sva dodatna obaveštenja ćemo stavljati ovde, a za dodatne informacije nas <a style="color:blue;text-decoration: underline;" href="#kontakt">kontaktirajte.</a>
 					</div>
-
-					<a href="https://docs.google.com/spreadsheets/d/1Qf1CnvlSw7V8V44fAyxMbyvuWy9gSN9-jJc2FnR9Yn0/edit?usp=sharing" target="_blank" title="Raspored" class="hoveringA">
 						<div class="linksDiv">
-							
 							<img src="../robotika/calendar.svg" class="linkIcon" alt="Raspored">
 							<span class="linksTitle">Termini</span>
-							<span class="linksText">
-								Pogledajte u kom ste terminu u tabeli. Za promenu termina kliknite dugme ispod.
+							<span class="linksText" style="font-weight: bold;">
+								3. čas <br> subota 30.07. 14:00-16:00h <br><br>
+								4. čas <br> cetvrtak 04.08. 15:00-17:00h <br><br>
+								5. čas <br> subota 06.08. 14:00-16:00h <br><br>
 							</span>
-							<a class="buttonTermin" href="https://docs.google.com/forms/d/e/1FAIpQLSd0BRi95js6ucPJGI8tw8NmIb7EVS-vMUGXBLg2t5fznx3InQ/viewform?usp=sf_link" target="_blank">Promeni termin!</a>
-							
 						</div>
-					</a>
 
 					<a href="https://drive.google.com/drive/folders/1AudqpBJfObtHZgQPJPGd3De9f72WNXVw?usp=sharing" target="_blank" title="Materijali" class="hoveringA">
 						<div class="linksDiv">
