--- a/public/dizajn/kompletan.html
+++ b/public/dizajn/kompletan.html
@@ -23,7 +23,9 @@
 					<div class="naslovMaterijali">KOMPLETAN KURS</div>
 				
 					<div class="obavestenje">
-						Na ovoj strani možete naći sve neophodne informacije vezane za kurs, materijale koje ćete koristiti, videti i promeniti svoj termin. Sva dodatna obaveštenja ćemo stavljati ovde, a za dodatne informacije nas <a style="color:blue;text-decoration: underline;" href="#kontakt">kontaktirajte.</a>
+						<span style="color:red;font-weight: bold;">Važno obaveštenje!</span><br>
+						Zbog smanjenog interesovanja za termin A, kurs će nastaviti da se održava samo u terminu B, 3. čas je u subotu 30.07, dok će 4. čas biti u četvrtak 04.08. Kao što je i navedeno ispod u sekciji termini.
+						Za dodatne informacije nas <a style="color:blue;text-decoration: underline;" href="#kontakt">kontaktirajte.</a>
 					</div>
 						<div class="linksDiv">
 							<img src="../robotika/calendar.svg" class="linkIcon" alt="Raspored">
