--- a/public/dizajn/prilagodjen.html
+++ b/public/dizajn/prilagodjen.html
@@ -23,7 +23,8 @@
 					<div class="naslovMaterijali">PRILAGOĐEN KURS</div>
 				
 					<div class="obavestenje">
-						Na ovoj strani možete naći sve neophodne informacije vezane za kurs, materijale koje ćete koristiti i videti svoj termin. Sva dodatna obaveštenja ćemo stavljati ovde, a za dodatne informacije nas <a style="color:blue;text-decoration: underline;" href="#kontakt">kontaktirajte.</a>
+						<span style="color:red;font-weight: bold;">Važno obaveštenje!</span><br>
+						Prilagođen kurs je završen, ukoliko neko želi da nadoknadi neki od časova nek nam se javi sa naznakom na koji čas bi nadoknadili, dok će dodela sertifikata biti u subotu 06.08. od 16h. Vidimo se!
 					</div>
 
 						<div class="linksDiv">
