--- a/public/dizajn/prilagodjen.html
+++ b/public/dizajn/prilagodjen.html
@@ -35,7 +35,7 @@
 								1. čas <br> petak 15.07. 15:00-16:30h <br><br>
 								2. čas <br> subota 23.07. 16:30-18:00h <br><br>
 								3. čas <br> utorak 26.07. 16:30-18:00h <br><br>
-								Završni čas <br> subota 30.07. 16:30-18:00h
+								Nadoknada (završni čas) <br> subota 30.07. 16:30-18:00h
 							</span>
 							
 						</div>
